# Foodiebot

./: .gitignore  README.md  pyproject.toml
foodiebot/: __init__.py  app.yaml  auth.py  main.py  profile.py  requirements.txt  restaurant.py  schema.sql
foodiebot/static/: black_list_manage.js  food_manage.js  food_manage_style.css  index.js  map.js  parameters.js  store_response.js  style.css
foodiebot/templates/: base.html  error.html  show_result.html  user_info.html  user_input.html
foodiebot/templates/auth/: login.html  register.html
foodiebot/templates/profile/: manage_black_list.html  manage_food.html
foodiebot/templates/restaurant/: result.html  show_result.html  test.html  user_input.html
tests/: conftest.py  data.sql  test_auth.py  test_db.py  test_factory.py
